# past-projects

2048/: 2048.c  2048.h  README.md  a.out
2048/cpp2048/: 2048.cpp  2048.h  Makefile  ai.cpp
hquin/: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md
hquin/doc/: basic_socket.md  basic_tcpip.md  developing.md  server.md
hquin/hquin/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cpp  Channel.h  Epoller.cpp  Epoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Timestamp.cpp  Timestamp.h  Timestap.cpp  Util.cpp  Util.h
hquin/hquin/http/: CMakeLists.txt  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  HTTPServer.cpp  HTTPServer.h
hquin/tests/: CMakeLists.txt  acceptor_test.cpp  buffer_test.cpp  event_test.cpp  http_test.cpp  log_test.cpp  tcpserver_send_test.cpp  tcpserver_test.cpp  timestap_test.cpp
tinyhttp/: .gitignore  Makefile  README.md  error.c  error.h  home.html  httpserver.c  rio.c  rio.h  tiny.c  tiny.h
tinyhttp/cgi-bin/: adder.c
yequ/: .gitignore  Makefile  README.md
yequ/boot/: boot.s  setup.s
yequ/driver/: kbd.c  timer.c  vga.c
yequ/include/: args.h  debug.h  gdt.h  idt.h  istr.h  kbd.h  mm.h  string.h  timer.h  tty.h  types.h  vga.h
yequ/kernel/: debug.c  gdt.c  head.s  idt.c  klib.s  main.c  mm.c  tty.c
yequ/lib/: string.c
yequ/tool/: kernel.ld
